--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
 body {
     margin: 0 auto;
     padding: 0 auto;
-    background-image: url(https://drscdn.500px.org/photo/192306115/m=2048/1b8bc8226bf55ad3782ec109f1802b52);
-    background-repeat: no-repeat;
-    background-position: center;
     font-family: 'Quicksand', sans-serif;
 }
 
 header {
-
+    background-image: url(https://drscdn.500px.org/photo/192306115/m=2048/1b8bc8226bf55ad3782ec109f1802b52);
+    background-repeat: no-repeat;
+    background-position: -150px;
+    height: 100%;
+    border: 1px rgb(0, 0, 0) solid;
+    text-align: center;
+    position: relative;
+    margin: 0%;
+    padding: 0%;
 }
 
 nav {
     margin-left: 10px;
-
+    float: left;
+    position: absolute;
 }
 
 nav p {
@@ -29,53 +35,130 @@ nav p a {
     border: 3px rgb(0, 0, 0) solid;
     border-radius: 4px;
     padding: 0px 3px;
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
-nav p a:hover {
+.nav a:hover {
     font-size: 30px;
     text-decoration-line: none;
     background-color: rgb(173, 217, 255);
     color: rgb(0, 0, 0);
     border: 3px rgb(255, 255, 255) solid;
-    transition: 0.4s;
+    transition: 0.2s;
+}
+
+.abc {
+    background-color: rgb(0, 42, 79);
+    opacity: 0.5;
+    width: 100%;
+    height: 55px;
 }
 
 #first {
+    color: aliceblue;
     text-align: center;
     font-size: 30px;
+    margin-top: 5%;
+    padding-bottom: 1%;
 }
 
 h1 {
     text-transform: uppercase;
 }
 
-main {
-    margin-top: 30%;
+main h2 {
+    background-color: aliceblue;
+    border: 2px black solid;
+    border-radius: 5px;
+    width: max-content;
+    padding: 5px;
+    opacity: 0.7;
 }
 
-main p {
-    position: relative;
-    text-align: center;
+#dm {
+    margin-top: 5%;
+    scroll-behavior: smooth;
 }
 
-main p a {
+#dm p a {
+    transition-duration: 1s;
+}
+
+header p a {
     background-color: none;
     font-size: 30px;
     text-decoration-line: none;
     color: rgb(0, 0, 0);
     border: 3px rgb(255, 255, 255) solid;
     border-radius: 4px;
-    transition: 0.4s;
+    transition: 0.2s;
     padding: 0px 3px;
     display: inline-block;
 }
 
-main p a:hover {
-    font-size: 35px;
+header p a:hover {
+    font-size: 30px;
     text-decoration-line: none;
     background-color: rgb(0, 42, 79);
     color: rgb(255, 255, 255);
     border: 3px rgb(0, 42, 79) solid;
-    transition: 0.4s;
+    transition: 0.2s;
 }
+
+main {
+    display: flex;
+}
+
+
+.bg {
+    background-color: rgb(172	190	202	);
+    width: 100%;
+    opacity: 0.7;
+    padding: 1%;
+}
+
+.titles {
+    box-sizing: border-box;
+    margin: 10px 10px 0px;
+    position: relative;
+    max-width: 50%;
+    margin: 0 auto;
+}
+
+.titles p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.titles ul {
+    list-style: none;
+    font-size: 20px;
+    display: flex;
+}
+
+.titles ul li {
+    margin-right: 10px;
+}
+
+.cont {
+    display: flex;
+    box-sizing: border-box;
+}
+
+.cont p {
+    margin: auto 5px auto;
+}
+
+.cont p a {
+    text-decoration-line: none;
+    color: rgb(0, 42, 79);
+    border: 2px rgb(0, 42, 79) solid;
+    border-radius: 5px;
+    padding: 3px;
+}
+
+.cont p a:hover {
+    text-decoration-line: none;
+    color: rgb(0, 76, 143);
+}
+
