--- a/style.css
+++ b/style.css
@@ -1,164 +1,135 @@
 body {
-    margin: 0 auto;
-    padding: 0 auto;
-    font-family: 'Quicksand', sans-serif;
-}
-
-header {
-    background-image: url(https://drscdn.500px.org/photo/192306115/m=2048/1b8bc8226bf55ad3782ec109f1802b52);
-    background-repeat: no-repeat;
-    background-position: -150px;
-    height: 100%;
-    border: 1px rgb(0, 0, 0) solid;
-    text-align: center;
-    position: relative;
     margin: 0%;
     padding: 0%;
 }
 
+img {
+    width: 100px;
+    height: auto;
+}
+
 nav {
+    float: right;
+    margin: auto 0;
+}
+
+nav ul {
+    display: flex;
+}
+
+nav ul li {
+    list-style: none;
+}
+
+nav ul a {
+    color: white;
+    text-decoration-line: none;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    border: 1px rgb(255, 255, 255) dashed;
+    background-color: rgb(69, 36, 4);
+    padding: 5px 10px;
     margin-left: 10px;
-    float: left;
-    position: absolute;
-}
-
-nav p {
-    display: inline-flex;
-    padding: 0px 5px;
-    margin-left: 5px;
-}
-
-nav p a {
-    font-size: 30px;
-    text-decoration-line: none;
-    color: rgb(141, 141, 141);
-    border: 3px rgb(0, 0, 0) solid;
-    border-radius: 4px;
-    padding: 0px 3px;
-    transition: 0.2s;
-}
-
-.nav a:hover {
-    font-size: 30px;
-    text-decoration-line: none;
-    background-color: rgb(173, 217, 255);
-    color: rgb(0, 0, 0);
-    border: 3px rgb(255, 255, 255) solid;
-    transition: 0.2s;
-}
-
-.abc {
-    background-color: rgb(0, 42, 79);
-    opacity: 0.5;
-    width: 100%;
-    height: 55px;
-}
-
-#first {
-    color: aliceblue;
-    text-align: center;
-    font-size: 30px;
-    margin-top: 5%;
-    padding-bottom: 1%;
-}
-
-h1 {
-    text-transform: uppercase;
-}
-
-main h2 {
-    background-color: aliceblue;
-    border: 2px black solid;
+    margin-right: 20px;
     border-radius: 5px;
-    width: max-content;
-    padding: 5px;
-    opacity: 0.7;
+    transition: 0.25s;
 }
 
-#dm {
-    margin-top: 5%;
-    scroll-behavior: smooth;
-}
-
-#dm p a {
-    transition-duration: 1s;
-}
-
-header p a {
-    background-color: none;
-    font-size: 30px;
+nav ul a:hover {
+    color: rgb(69, 36, 4);
     text-decoration-line: none;
-    color: rgb(0, 0, 0);
-    border: 3px rgb(255, 255, 255) solid;
-    border-radius: 4px;
-    transition: 0.2s;
-    padding: 0px 3px;
-    display: inline-block;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    border: 1px rgb(69, 36, 4) solid;
+    background-color: rgb(255, 255, 255);
+    padding: 5px 10px;
+    margin-left: 10px;
+    margin-right: 20px;
+    border-radius: 5px;
+    transition: 0.25s;
 }
 
-header p a:hover {
-    font-size: 30px;
-    text-decoration-line: none;
-    background-color: rgb(0, 42, 79);
-    color: rgb(255, 255, 255);
-    border: 3px rgb(0, 42, 79) solid;
-    transition: 0.2s;
+header {
+    display: flex;
+    margin: auto;
+    background-color:rgb(69, 36, 4);
+    border-bottom: 3px white dashed ;
+}
+
+header h1 {
+    margin: auto;
+    font-family: 'Sacramento', cursive;
+    font-weight: bold;
+    font-size: 75px;
+    color: aliceblue;
+    padding: 0 15px;
 }
 
 main {
+    height: auto;
+    border-bottom: 3px rgb(69, 36, 4) dashed ;
+    
+}
+
+main .one {
+    background-color: rgb(132, 88, 43);
+    display: flex;
+    border-bottom: 3px rgb(255, 255, 255) dashed ;
+}
+
+.description {
+    color: aliceblue;
+    width: 75%;
+    height: auto;
+    padding: 30px 50px;
+    border-right: 3px rgb(255, 255, 255) dashed;
+}
+
+.description p {
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.pic img {
+    width: auto;
+    height: 400px;
+}
+
+.two {
     display: flex;
 }
 
-
-.bg {
-    background-color: rgb(172	190	202	);
-    width: 100%;
-    opacity: 0.7;
-    padding: 1%;
+.right {
+    width: 50%;
+    display: block;
+    width: auto;
 }
 
-.titles {
-    box-sizing: border-box;
-    margin: 10px 10px 0px;
-    position: relative;
-    max-width: 50%;
+.right article {
+    display: flex;
+    font-family: 'Sacramento', cursive;
+    font-size: 40px;
+}
+
+.top {
+    margin-left: 5%;
+}
+
+.between h2{
     margin: 0 auto;
+    padding: auto;
 }
 
-.titles p {
-    font-size: 20px;
-    font-weight: bold;
+.bottom {
+    float: right;
+    margin-right: 3%;
 }
 
-.titles ul {
-    list-style: none;
-    font-size: 20px;
-    display: flex;
+.middle {
+    width: 50%;
+    height: auto;
 }
 
-.titles ul li {
-    margin-right: 10px;
+.middle img {
+    width: 100%;
 }
-
-.cont {
-    display: flex;
-    box-sizing: border-box;
-}
-
-.cont p {
-    margin: auto 5px auto;
-}
-
-.cont p a {
-    text-decoration-line: none;
-    color: rgb(0, 42, 79);
-    border: 2px rgb(0, 42, 79) solid;
-    border-radius: 5px;
-    padding: 3px;
-}
-
-.cont p a:hover {
-    text-decoration-line: none;
-    color: rgb(0, 76, 143);
-}
-
