--- a/style.css
+++ b/style.css
@@ -1,163 +1,166 @@
-body {
-    margin: 0 auto;
-    padding: 0 auto;
-    font-family: 'Quicksand', sans-serif;
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Helvetica';
+    font-size: 22px;
+    color: seashell;
+    background-color: black;
+
 }
 
-header {
-    background-image: url(https://drscdn.500px.org/photo/192306115/m=2048/1b8bc8226bf55ad3782ec109f1802b52);
-    background-repeat: no-repeat;
-    background-position: -150px;
-    height: 100%;
-    border: 1px rgb(0, 0, 0) solid;
-    text-align: center;
-    position: relative;
-    margin: 0%;
-    padding: 0%;
-}
-
-nav {
-    margin-left: 10px;
-    float: left;
-    position: absolute;
-}
-
-nav p {
-    display: inline-flex;
-    padding: 0px 5px;
-    margin-left: 5px;
-}
-
-nav p a {
-    font-size: 30px;
-    text-decoration-line: none;
-    color: rgb(141, 141, 141);
-    border: 3px rgb(0, 0, 0) solid;
-    border-radius: 4px;
-    padding: 0px 3px;
-    transition: 0.2s;
-}
-
-.nav a:hover {
-    font-size: 30px;
-    text-decoration-line: none;
-    background-color: rgb(173, 217, 255);
-    color: rgb(0, 0, 0);
-    border: 3px rgb(255, 255, 255) solid;
-    transition: 0.2s;
-}
-
-.abc {
-    background-color: rgb(0, 42, 79);
-    opacity: 0.5;
-    width: 100%;
-    height: 55px;
-}
-
-#first {
-    color: aliceblue;
-    text-align: center;
-    font-size: 30px;
-    margin-top: 5%;
-    padding-bottom: 1%;
+.header {
+    display: flex;
+    position: fixed;
+    justify-content: space-between;
+    border-bottom: 1px seashell solid;
+    width: 99%;
+    height: 69px;
+    align-items: center;
+    z-index: 3;
+    padding: 0 20px;
+    margin-bottom: 200px;
 }
 
 h1 {
-    text-transform: uppercase;
+    font-family: 'Sacramento', cursive;
+    font-size: 40;
 }
 
-main h2 {
-    background-color: aliceblue;
-    border: 2px black solid;
-    border-radius: 5px;
-    width: max-content;
-    padding: 5px;
-    opacity: 0.7;
+ul {
+    display: inline-flex;
 }
 
-#dm {
-    margin-top: 5%;
-    scroll-behavior: smooth;
-}
-
-#dm p a {
-    transition-duration: 1s;
-}
-
-header p a {
-    background-color: none;
-    font-size: 30px;
-    text-decoration-line: none;
-    color: rgb(0, 0, 0);
-    border: 3px rgb(255, 255, 255) solid;
-    border-radius: 4px;
-    transition: 0.2s;
-    padding: 0px 3px;
-    display: inline-block;
-}
-
-header p a:hover {
-    font-size: 30px;
-    text-decoration-line: none;
-    background-color: rgb(0, 42, 79);
-    color: rgb(255, 255, 255);
-    border: 3px rgb(0, 42, 79) solid;
-    transition: 0.2s;
-}
-
-main {
-    display: flex;
-}
-
-
-.bg {
-    background-color: rgb(172	190	202	);
-    width: 100%;
-    opacity: 0.7;
-    padding: 1%;
-}
-
-.titles {
-    box-sizing: border-box;
-    margin: 10px 10px 0px;
-    position: relative;
-    max-width: 50%;
-    margin: 0 auto;
-}
-
-.titles p {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.titles ul {
+ul li {
     list-style: none;
-    font-size: 20px;
+    padding: 0 20px;
+}
+
+ul li a {
+    color: seashell;
+}
+
+.topmain {
+    padding-top: 70px;
+    position: relative;
     display: flex;
+    justify-content: center;
+    height: 875px;
 }
 
-.titles ul li {
-    margin-right: 10px;
-}
-
-.cont {
+.title {
     display: flex;
-    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+    margin: 400px 0px; 
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: center;
+    z-index: 2;
+    opacity: 0.6;
+    font-family: 'Lobster', cursive;
 }
 
-.cont p {
-    margin: auto 5px auto;
+h2, h4 {
+    color: seashell;
+    text-align: center;
 }
 
-.cont p a {
-    text-decoration-line: none;
-    color: rgb(0, 42, 79);
-    border: 2px rgb(0, 42, 79) solid;
-    border-radius: 5px;
-    padding: 3px;
+h4 {
+    line-height: 2;
 }
 
-.cont p a:hover {
-    text-decoration-line: none;
-    color: rgb(0, 76, 143);
+.topmain img {
+    position: absolute;
+    width: 1300px;
+    height: auto;
+    z-index: 0;
+}
+
+.middlemain {
+    height: 1000px;
+}
+
+@media screen and (width=500px) {
+    * {
+        padding: 0;
+        margin: 0;
+        font-family: 'Helvetica';
+        font-size: 22px;
+        color: seashell;
+        background-color: black;
+    
+    }
+    
+    .header {
+        display: flex;
+        position: fixed;
+        justify-content: space-between;
+        border-bottom: 1px seashell solid;
+        width: 99%;
+        height: 69px;
+        align-items: center;
+        z-index: 3;
+        padding: 0 20px;
+        margin-bottom: 200px;
+    }
+    
+    h1 {
+        font-family: 'Sacramento', cursive;
+        font-size: 40;
+        color: red;
+    }
+    
+    ul {
+        display: inline-flex;
+    }
+    
+    ul li {
+        list-style: none;
+        padding: 0 20px;
+    }
+    
+    ul li a {
+        color: seashell;
+    }
+    
+    .topmain {
+        padding-top: 70px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        height: 875px;
+    }
+    
+    .title {
+        display:inline-block;
+        position: relative;
+        width: 100%;
+        margin: auto;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        z-index: 2;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: 'Lobster', cursive;
+    }
+    
+    h2, h4 {
+        color: seashell;
+        text-align: center;
+    }
+    
+    h4 {
+        line-height: 2;
+    }
+    
+    .topmain img {
+        position: absolute;
+        width: 1300px;
+        height: auto;
+        z-index: 0;
+    }
+    
+    .middlemain {
+        height: 1000px;
+    }
 }
