--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
     * {
         padding: 0;
         margin: 0;
@@ -112,6 +113,126 @@
         height: 1000px;
     }
 
+/*Media width = 610px*/
+@media only screen 
+and (max-width: 610px) {
+
+    * {
+        padding: 0;
+        margin: 0;
+        font-family: 'Helvetica';
+        font-size: 22px;
+        color: seashell;
+        background-color: black;
+        /*border: 1px red solid;*/
+    }
+
+    .header {
+        display: flex;
+        position: fixed;
+        justify-content: space-between;
+        border-bottom: 1px seashell solid;
+        width: 100%;
+        height: 69px;
+        align-items: center;
+        z-index: 3;
+        margin-bottom: 200px;
+    }
+
+    
+    ul {
+        display: inline-flex;
+    }
+    
+    ul li {
+        list-style: none;
+        padding: 0 20px;
+    }
+    
+    ul li a {
+        color: seashell;
+        text-decoration: none;
+        border: 1px seashell solid;
+        border-radius: 10px;
+        padding: 5px 10px;
+        transition: 0.5s;
+    }
+    
+    ul li a:hover {
+        color: rgb(0, 0, 0);
+        background-color: seashell;
+        text-decoration: none;
+        border: 1px seashell solid;
+        border-radius: 10px;
+        padding: 5px 10px;
+        transition: 0.2s
+    }
+
+    .current a {
+        color: black;
+        background-color: seashell;
+        text-decoration: none;
+        border: 1px seashell solid;
+        border-radius: 10px;
+        padding: 5px 10px;
+        transition: 0.5s;
+    }
+    
+    
+    .topmain {
+        padding-top: 70px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        height: 875px;
+    }
+    
+    .title {
+        display: inline-flex;
+        position: relative;
+        margin: 4% auto auto 15%;
+        z-index: 2;
+        opacity: 0.5;
+        font-family: 'Lobster', cursive;
+        width: 35%;
+    }
+
+    
+    h1 {
+        font-family: 'Sacramento', cursive;
+        font-size: 35;
+        padding-left: 10px;
+        word-spacing: 10%;
+    }
+
+    h2, h4 {
+        color: seashell;
+        text-align: center;
+    }
+    
+    h2 {
+        font-family: 'Lobster', cursive;
+        font-size: 40px;
+        width: 100%;
+    }
+    
+    h4 {
+        line-height: 2;
+    }
+
+    .topmain img {
+        position: absolute;
+        width: 1300px;
+        height: auto;
+        z-index: 0;
+    }
+
+    .middlemain {
+        height: 1000px;
+    }
+}
+
+
 /* 2532x1170 pixels at 460ppi */
 @media only screen 
     and (max-width: 580px) { 
@@ -187,6 +308,182 @@
             border: 1px seashell solid;
             border-radius: 10px;
             padding: 5px 10px;
+            transition: 0.5s;
+        }
+    
+        .topmain {
+            padding-top: 80px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            height: 875px;
+        }
+    
+        .title {
+            display: inline-flex;
+            position: relative;
+            z-index: 2;
+            opacity: 0.5;
+            font-family: 'Lobster', cursive;
+            width: 30%;
+            margin: 4% auto auto 5%;
+        }
+    
+        h2, h4 {
+            color: seashell;
+            text-align: center;
+        }
+
+        .title h2 {
+            font-size: 20px;
+        }
+    
+        h4 {
+            line-height: 2;
+        }
+    
+        .topmain img {
+            position: absolute;
+            width: 100%;
+            height: auto;
+            z-index: 0;
+        }
+    
+        .middlemain {
+
+        }
+}
+
+@media only screen 
+    and (max-width: 350px) {
+
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: 'Helvetica';
+            font-size: 12px;
+            color: seashell;
+            background-color: black;
+            /*border: 1px red solid;*/
+        }
+
+        .header {
+            display: block;
+            position: fixed;
+            border-bottom: 1px seashell solid;
+            width: 100%;
+            height: 60px;
+            align-items: center;
+            z-index: 3;
+            margin-bottom: 0px;
+        }
+
+        h1 {
+            font-size: 20px;
+        }
+        ul li a {
+            color: seashell;
+            text-decoration: none;
+            border: 1px seashell dashed;
+            border-radius: 10px;
+            padding: 2px 5px;
+            transition: 0.5s;
+        }
+        
+        .current a {
+            color: black;
+            background-color: seashell;
+            text-decoration: none;
+            border: 1px seashell solid;
+            border-radius: 10px;
+            padding: 2px 5px;
+            transition: 0.5s;
+        }
+
+        .topmain {
+            padding-top: 50px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            height: 875px;
+        }
+
+    }
+
+@media only screen 
+    and (max-width: 320px) { 
+    
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: 'Helvetica';
+            font-size: 12px;
+            color: seashell;
+            background-color: black;
+            /*border: 1px red solid;*/
+        }
+    
+        .header {
+            display: block;
+            position: fixed;
+            border-bottom: 1px seashell solid;
+            width: 100%;
+            height: 80px;
+            align-items: center;
+            z-index: 3;
+            margin-bottom: 0px;
+        }
+    
+        h1 {
+            font-family: 'Sacramento', cursive;
+            font-size: 20;
+            text-align: center;
+            margin: 3px 0;
+            word-spacing: 10px;
+        }
+    
+        nav {
+            display: flex;
+            justify-content: center;
+        }
+
+        ul {
+            display: inline-flex;
+            justify-content: space-between;
+        }
+    
+        ul li {
+            list-style: none;
+            padding: 0 10px;
+
+        }
+    
+        ul li a {
+            color: seashell;
+            text-decoration: none;
+            border: 1px seashell dashed;
+            border-radius: 10px;
+            padding: 2px 5px;
+            transition: 0.5s;
+        }
+    
+        ul li a:hover {
+            color: rgb(0, 0, 0);
+            background-color: seashell;
+            text-decoration: none;
+            border: 1px seashell solid;
+            border-radius: 10px;
+            padding: 2px 5px;
+            transition: 0.2s
+        }
+
+        .current a {
+            color: black;
+            background-color: seashell;
+            text-decoration: none;
+            border: 1px seashell solid;
+            border-radius: 10px;
+            padding: 2px 5px;
             transition: 0.5s;
         }
     
